--- a/cluster/apps/games/minecraft/minecraft-neoForge-create.yaml
+++ b/cluster/apps/games/minecraft/minecraft-neoForge-create.yaml
@@ -82,7 +82,7 @@ spec:
         apiKey:
           existingSecret: minecraft-rcon-credentials
           secretKey: CF_API_KEY
-        # slug: create-ultimate-selection
+        slug: create-ultimate-selection
         # fileId: "6836219"
       rcon:
         enabled: true
