--- a/cluster/apps/games/minecraft/minecraft-neoForge-create.yaml
+++ b/cluster/apps/games/minecraft/minecraft-neoForge-create.yaml
@@ -54,10 +54,16 @@ spec:
       dataDir:
         enabled: true
         existingClaim: minecraft-create-data-1.20.1
-      create-downloads:
-        enabled: true
-        existingClaim: create-downloads
-        mountPath: /downloads
+    extraVolumes:
+      - volumeMounts:
+          - name: create-downloads-nfs
+            mountPath: /downloads
+            readOnly: true
+        volumes:
+          - name: create-downloads-nfs
+            nfs:
+              server: freenas.home
+              path: /mnt/all/games/minecraft/forge/downloads
     mcbackup:
       enabled: true
       persistence:
@@ -78,12 +84,11 @@ spec:
       forceReDownload: true
       memory: 4096M
       jvmXXOpts: "-Xms4G -Xmx6G -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1"
-      # autoCurseForge:
-      #   apiKey:
-      #     existingSecret: minecraft-rcon-credentials
-      #     secretKey: CF_API_KEY
-      #   slug: create-ultimate-selection
-        # fileId: "6836219"
+      autoCurseForge:
+        apiKey:
+          existingSecret: minecraft-rcon-credentials
+          secretKey: CF_API_KEY
+        slug: create-ultimate-selection
       rcon:
         enabled: true
         existingSecret: minecraft-rcon-credentials
