--- a/cluster/apps/games/minecraft/minecraft-neoForge-create.yaml
+++ b/cluster/apps/games/minecraft/minecraft-neoForge-create.yaml
@@ -54,16 +54,16 @@ spec:
       dataDir:
         enabled: true
         existingClaim: minecraft-create-data-1.20.1
-    # extraVolumes:
-    #   - volumeMounts:
-    #       - name: create-downloads-nfs
-    #         mountPath: /downloads
-    #         readOnly: false
-    #     volumes:
-    #       - name: create-downloads-nfs
-    #         nfs:
-    #           server: freenas.home
-    #           path: /mnt/all/games/minecraft/forge/downloads
+    extraVolumes:
+      - volumeMounts:
+          - name: create-downloads-nfs
+            mountPath: /downloads
+            readOnly: false
+        volumes:
+          - name: create-downloads-nfs
+            nfs:
+              server: freenas.home
+              path: /mnt/all/games/minecraft/forge/downloads
     mcbackup:
       enabled: true
       persistence:
