--- a/cluster/flux/vars/cluster-settings.yaml
+++ b/cluster/flux/vars/cluster-settings.yaml
@@ -17,7 +17,7 @@ data:
   HASS_LB: 10.0.0.9
   ESPHOME_LB: 10.0.0.12
   MINECRAFT_CREATE_LB: 10.0.0.10
-  PALWORLD_LB: 10.0.0.16
+  MINECRAFT_CREATE_MODPACK_LB: 10.0.0.16
   XTEVE_LB: 10.0.0.13
   RADARR_LB: 10.0.0.14
   SONARR_LB: 10.0.0.15
