update core dns to not use host resolv.conf

--- a/cluster/apps/kube-system/kustomization.yaml
+++ b/cluster/apps/kube-system/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - ./cert-manager
   - ./cloudflare-ddns
   - ./cloudflared
+  - ./coredns-custom
   - ./external-dns
   - ./ingress-nginx
   - ./k8s-gateway
