--- a/cluster/apps/games/zomboid/kustomization.yaml
+++ b/cluster/apps/games/zomboid/kustomization.yaml
@@ -2,7 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./namespace.yaml
-  # - ./minecraft
-  # - ./satisfactory
-  - ./zomboid
+  - pvc.yaml
+  - secret.sops.yaml
+  - helmrelease.yaml
