Fix zomboid pvc

--- a/cluster/apps/games/zomboid/helmrelease.yaml
+++ b/cluster/apps/games/zomboid/helmrelease.yaml
@@ -79,7 +79,7 @@ spec:
       game:
         enabled: true
         existingClaim: zomboid-game
-        mountPath: /home/steam/Steam
+        mountPath: /home/steam/Zomboid
     probes:
       startup:
         enabled: false
