update rcon port and add mods

--- a/cluster/apps/games/zomboid/helmrelease.yaml
+++ b/cluster/apps/games/zomboid/helmrelease.yaml
@@ -43,8 +43,8 @@ spec:
       RCON_ENABLED: "true"
       RCON_PORT: "27015"
       # Mods (comma-separated Workshop IDs, empty for vanilla)
-      MOD_IDS: ""
-      MOD_WORKSHOP_IDS: ""
+      MOD_NAMES: "SkillRecoveryJournal;ChuckleberryFinnAlertSystem;errorMagnifier"
+      MOD_WORKSHOP_IDS: "2503622437;3077900375;2896041179"
     # Secrets: SERVER_PASSWORD, RCON_PASSWORD, ADMIN_PASSWORD
     envFrom:
       - secretRef:
@@ -65,10 +65,10 @@ spec:
             enabled: true
             port: 16262
             protocol: UDP
-          steam:
+          rcon:
             enabled: true
             port: 27015
-            protocol: UDP
+            protocol: TCP
     persistence:
       # Server data (config, saves, logs)
       data:
