--- a/cluster/apps/default/kometa/secret.sops.yaml
+++ b/cluster/apps/default/kometa/secret.sops.yaml
@@ -8,6 +8,12 @@ stringData:
     PLEX_TOKEN: ENC[AES256_GCM,data:Pq32+RmDDuYEcH1gY8pN04JcLPo=,iv:uXw7N+AZrp9QaB9EOl26nGwXGqTIbDWVfmuRCq1OTxk=,tag:7rs0V1bZtHQqXCh/WrURJg==,type:str]
     TMDB_API_KEY: ENC[AES256_GCM,data:82818cJ3ec5LpEq7F0vmxu1//8E85pHuYkB0lkF9OX4=,iv:b40NNrcy5G8eDLO0J0/DCSiEi4Nji05W19PsXaZtZ1Q=,tag:OQFzWMayDtdxEKBHuqD4Ew==,type:str]
     RADARR_API_KEY: ENC[AES256_GCM,data:ESDh6XM76gSLBR9LNaqwp1Ij7H5bByq+VrBnXEeJksk=,iv:RqHZjUYo5VHO7iYrxbkP8NUna044K4m6RDlFM3ODucw=,tag:IvNpVhRw3upUptCTY2i5BQ==,type:str]
+    TRAKT_CLIENT_ID: ENC[AES256_GCM,data:kmMNdHq5bJPQVd8iQG6rB9LaLTlGpnbq/HnyO6eiW0QHpoBReFmfGOjjOIVOt4sUIR4/oe0owgf3JNvPoVr/+Q==,iv:zLFXLsMwmNN46/UUBWe+Tzos0oPxaEC1nxxavwe5xvA=,tag:nl7+dq79LnVifgtNa1PJRA==,type:str]
+    TRAKT_CLIENT_SECRET: ENC[AES256_GCM,data:NO0cwJWZzKetv57kXsWJSIIluIHPow+UlwRn4z9fayVUDnHnEUlHQ7qo1FFFOdThhj6yDmLspVNg3I4JR7fwpw==,iv:tIsjLcyYmU2LXB+Ir9LSCGRIjxUGNQvb9ssv0dS09ak=,tag:DMmAf1+117yiHLsvWKIGsw==,type:str]
+    TRAKT_ACCESS_TOKEN: ENC[AES256_GCM,data:Fra2v2u++Z1lJquLhVhHXFTacql81TqXLPhtnCOWSLSe1NMHkJOElZkwELKoidMbNIXxIJ8+u6+KOwBiM4VgJQ==,iv:l6dFIRC9NhjWI3B7ViG0UqWjahBIBOUp+HIh8SxunJo=,tag:vKb61Ek9vdT4WtXezNKHZA==,type:str]
+    TRAKT_REFRESH_TOKEN: ENC[AES256_GCM,data:dgwvQ8B5dDrhRE1rbtVqrh2TlfGDulDTu1ohQBz3ucacC3uXK9h0zrQ5tlpNc+R/qWMHFuC4E7pAVJzGwcFUqw==,iv:j44fnI9AexxRZuO1MDtX7w6CL9JuKVS6XOmVmgVMhQQ=,tag:/MPpJb/SPTQ5NmUmjDZCrw==,type:str]
+    TRAKT_CREATED_AT: ENC[AES256_GCM,data:dqVzpjA/O0c8SQ==,iv:m3VJ7J1EBVLnvt8ZfWF3ek7jRCFhWT7KbIA/uPd/vjM=,tag:kOkZdbWmJOtAxiAmC2V03A==,type:str]
+    SONARR_API_KEY: ENC[AES256_GCM,data:Zn/84ZtQ4s1SXGxIwgZEwc3pV3orhko8Cb2+S5meKfc=,iv:54eCgcYKJ83t8ddqPyt3hFWv/BLW2IFKdzd7F5iSus8=,tag:QzRMWzXVDD/h3ZwiHpcjdQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +29,8 @@ sops:
             c2llQXM0cVYvK2ZSSUJKbFdZTmRkZW8KVOND6DZJpu+n9ItQq9OafmVFnsCrW/0j
             sX0U7Guq5G8rxbi2inlVwSk6dfghYbQrdeiIwuicO0RT6tJRgHJPDg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-04-21T09:46:28Z"
-    mac: ENC[AES256_GCM,data:mdA0iyLL6xFN+ZHZBvRTX/P3UGa/WUO0m143Tq7u76qGT5bd6rUITumeqRFvoH3twWL8qum9mj7Oa3k2VrzAyimLJgwGkjSq/u6ZA1P+MPj/jLmzkU0ZKpsxoE8oex/xXXAIkNE0hN9mIz2fKD/LIV79E6I3EmgCtZZssDgWyDQ=,iv:wmduvkWZLhvnC3rLLSY24Z/xBWZhBSQucMLaca1aoM8=,tag:0fxl03OJSdXG1ID6mXDGjQ==,type:str]
+    lastmodified: "2026-02-23T20:09:43Z"
+    mac: ENC[AES256_GCM,data:duCNOTNqT+CUV3LRr6vz/ZCFo2E4GYnKN3GLmJnn1S3uY8DFSstDCIslbct29UOE3uj+wRfFZhVirUh0oBrF9HHCT8Tt4lkrRD5Js3noGBicOXjAAvrY9qUbUluYG1GfxGRB+1iBoa0BLXt8CL9hDtSkuPkP8Szm1p5bgBgP/Io=,iv:u5/tXltCXb87+lFCQEMbRPMEeMKUmZWUemBNcox2nww=,tag:F1yJGj26zpPpqQOi9NLbXg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
