--- a/cluster/apps/default/kometa/secret.sops.yaml
+++ b/cluster/apps/default/kometa/secret.sops.yaml
@@ -5,15 +5,16 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    PLEX_TOKEN: ENC[AES256_GCM,data:Pq32+RmDDuYEcH1gY8pN04JcLPo=,iv:uXw7N+AZrp9QaB9EOl26nGwXGqTIbDWVfmuRCq1OTxk=,tag:7rs0V1bZtHQqXCh/WrURJg==,type:str]
-    TMDB_API_KEY: ENC[AES256_GCM,data:82818cJ3ec5LpEq7F0vmxu1//8E85pHuYkB0lkF9OX4=,iv:b40NNrcy5G8eDLO0J0/DCSiEi4Nji05W19PsXaZtZ1Q=,tag:OQFzWMayDtdxEKBHuqD4Ew==,type:str]
-    RADARR_API_KEY: ENC[AES256_GCM,data:ESDh6XM76gSLBR9LNaqwp1Ij7H5bByq+VrBnXEeJksk=,iv:RqHZjUYo5VHO7iYrxbkP8NUna044K4m6RDlFM3ODucw=,tag:IvNpVhRw3upUptCTY2i5BQ==,type:str]
-    TRAKT_CLIENT_ID: ENC[AES256_GCM,data:kmMNdHq5bJPQVd8iQG6rB9LaLTlGpnbq/HnyO6eiW0QHpoBReFmfGOjjOIVOt4sUIR4/oe0owgf3JNvPoVr/+Q==,iv:zLFXLsMwmNN46/UUBWe+Tzos0oPxaEC1nxxavwe5xvA=,tag:nl7+dq79LnVifgtNa1PJRA==,type:str]
-    TRAKT_CLIENT_SECRET: ENC[AES256_GCM,data:NO0cwJWZzKetv57kXsWJSIIluIHPow+UlwRn4z9fayVUDnHnEUlHQ7qo1FFFOdThhj6yDmLspVNg3I4JR7fwpw==,iv:tIsjLcyYmU2LXB+Ir9LSCGRIjxUGNQvb9ssv0dS09ak=,tag:DMmAf1+117yiHLsvWKIGsw==,type:str]
-    TRAKT_ACCESS_TOKEN: ENC[AES256_GCM,data:Fra2v2u++Z1lJquLhVhHXFTacql81TqXLPhtnCOWSLSe1NMHkJOElZkwELKoidMbNIXxIJ8+u6+KOwBiM4VgJQ==,iv:l6dFIRC9NhjWI3B7ViG0UqWjahBIBOUp+HIh8SxunJo=,tag:vKb61Ek9vdT4WtXezNKHZA==,type:str]
-    TRAKT_REFRESH_TOKEN: ENC[AES256_GCM,data:dgwvQ8B5dDrhRE1rbtVqrh2TlfGDulDTu1ohQBz3ucacC3uXK9h0zrQ5tlpNc+R/qWMHFuC4E7pAVJzGwcFUqw==,iv:j44fnI9AexxRZuO1MDtX7w6CL9JuKVS6XOmVmgVMhQQ=,tag:/MPpJb/SPTQ5NmUmjDZCrw==,type:str]
-    TRAKT_CREATED_AT: ENC[AES256_GCM,data:dqVzpjA/O0c8SQ==,iv:m3VJ7J1EBVLnvt8ZfWF3ek7jRCFhWT7KbIA/uPd/vjM=,tag:kOkZdbWmJOtAxiAmC2V03A==,type:str]
-    SONARR_API_KEY: ENC[AES256_GCM,data:Zn/84ZtQ4s1SXGxIwgZEwc3pV3orhko8Cb2+S5meKfc=,iv:54eCgcYKJ83t8ddqPyt3hFWv/BLW2IFKdzd7F5iSus8=,tag:QzRMWzXVDD/h3ZwiHpcjdQ==,type:str]
+    PLEX_TOKEN: ENC[AES256_GCM,data:HP2IxM0ttIdpQ/0Ho5ojZRojN68=,iv:StdE0q4QIGsxDnauRG8JuEzS0ubiIa8hZ6wYoZu7e4g=,tag:73FYdo2960wCE0uSuu1jzg==,type:str]
+    TMDB_API_KEY: ENC[AES256_GCM,data:5s2X/k26j+CalTJWIvzVyjq9Up2nIhJitDV5B08JUPE=,iv:swxg19o0cE7yLt1/2/f30x0jgfzpuJ+dDxHbthqaHP4=,tag:co34uZhYmqNjbZyGBUEhCg==,type:str]
+    RADARR_API_KEY: ENC[AES256_GCM,data:jBv28Aoh4sgVlJLYFBgcqu52RsLGlpfOQIEI4rxmKQc=,iv:AwQ57NbL4u+VKkwaQZlgv8xWhUDJj3CPKGglWRjTUPY=,tag:MfpXJtqeGEvPosstfXixIg==,type:str]
+    TRAKT_CLIENT_ID: ENC[AES256_GCM,data:Hcg5Wis0UtkYRO7+2jwx0FMYpKqiFDfS7GMBjfX0s5BtPw3vOv258whL/k5eH6YL02IAx9z2keyerDK4ZqEf5w==,iv:tUcm//QQyY/5b6nnj/6EwAbPxF/9H4XKQpY8UpNXHyU=,tag:C+COdV+FXEkrN3Q/x4XF3w==,type:str]
+    TRAKT_CLIENT_SECRET: ENC[AES256_GCM,data:Yc+IM5i+pVX28b9T5Zm4amDEF8/QW9dZXC/W0EkDaNfH9Lh3hV92WzlzTqM5BlS03AHDAt1rf7Q9ky3XYGf2wg==,iv:sHg5RLF1U/Og1TZozjPKxk0wQUnqQV4hRliLmV2/29k=,tag:1Wv0Z+Z/Gexpgh8tdq7WOQ==,type:str]
+    TRAKT_ACCESS_TOKEN: ENC[AES256_GCM,data:aOl+YjBbSSK/wrjGBFSrItIc4tK5dIUtq17mct1UMTNUokldwZDAObgRMJG2PHGYFUYHdz7jNMrNxkxuo5tdmw==,iv:AucaDrdeNs6AvWH7VOajuMCwes/PqHcKzlAvgkhXV2E=,tag:v85Uyl2asiS9j12OvSKQoQ==,type:str]
+    TRAKT_REFRESH_TOKEN: ENC[AES256_GCM,data:DdQmYD84PrWa8wwCUwT/mH0VEQtqzNvXLKoz4U7BYnTWPM4ZJ+gxmQH6pWcxH3tlzHDHg6d8TJgxS2cH2VS81Q==,iv:e6nPJ+7QTesx0HegmeLGaj0AmjwBBmK74pgmBDJH8hg=,tag:FhNCUYRLpTztLveEyXjchQ==,type:str]
+    TRAKT_CREATED_AT: ENC[AES256_GCM,data:XCNqLB08SeEYZA==,iv:6zYUgIcalXqAYtfUJtKT7G+jPLHta5HuW2et4RjcNWs=,tag:qHxqWgMcK6jv/v+03tU8vg==,type:str]
+    SONARR_API_KEY: ENC[AES256_GCM,data:vudR8wyC/u4Kp4HaygevZkaJTF12DYXz1Kijnmulcck=,iv:lfVOGU2rlWj2laPuIIlSuygwr/K9c+/7llU/BQH6XN4=,tag:ZCycXUHl3Pqfn0Dm0lg4lA==,type:str]
+    NOTIFIARR_API_KEY: ENC[AES256_GCM,data:qJINEZQ49VFBoj2kASfiPNHEAoalJskFwGmC6lE7wB+pu6UD,iv:rT2GlmVzLnk3fZIpbpCJaHDZF1huPDMS2a4Tk1kKhi4=,tag:r+kLWSUTyWMWmNA4SgUqXg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,14 +24,14 @@ sops:
         - recipient: age1r7u0qylrvurhvcaxjurqrflx2ey96lx5gzar6r8d9ctl6rzqg5gqu94ek4
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3M0ZiUVIxK0Nmc2NPNWw1
-            aEdDVDNnVW9rS3JabXJrbzRrSnNFRUREdkRRCjRCQlBibTk1S21ENnBpMm10Z1VE
-            aEZvZkhoSTdwWk1tVk5MdjhhVGRQRnMKLS0tIHc1Y2JtNW1LektKc2lzRUtkdEcy
-            c2llQXM0cVYvK2ZSSUJKbFdZTmRkZW8KVOND6DZJpu+n9ItQq9OafmVFnsCrW/0j
-            sX0U7Guq5G8rxbi2inlVwSk6dfghYbQrdeiIwuicO0RT6tJRgHJPDg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTbmdNcXZrazVVQ0d5cGx3
+            RWRUcHFNMFFYSXBMYjhVMWNNS29VRnJJVXdBCjVXUU9vdWt4YklHMzRxUnI1N0U1
+            ZmxqMWo2OEdDZi9XMVJQVEM2WUJQSUEKLS0tIElPWXVETjJZV3hHelFHc08xc3NU
+            TEl2N09tNDBPTWVpRFBCYm1Nb2JlRzQKHdoJzMpMLrk9Mkm4/V/CvqURDwNH8Myu
+            ZhJYvXPYrHlfFaRGIatqWHaDpq5BmPtT/2JVKaS+iGokro7JFwgcwQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-02-23T20:09:43Z"
-    mac: ENC[AES256_GCM,data:duCNOTNqT+CUV3LRr6vz/ZCFo2E4GYnKN3GLmJnn1S3uY8DFSstDCIslbct29UOE3uj+wRfFZhVirUh0oBrF9HHCT8Tt4lkrRD5Js3noGBicOXjAAvrY9qUbUluYG1GfxGRB+1iBoa0BLXt8CL9hDtSkuPkP8Szm1p5bgBgP/Io=,iv:u5/tXltCXb87+lFCQEMbRPMEeMKUmZWUemBNcox2nww=,tag:F1yJGj26zpPpqQOi9NLbXg==,type:str]
+    lastmodified: "2026-02-24T10:30:50Z"
+    mac: ENC[AES256_GCM,data:AzQ2acOX9KmuS+GOHdJ5UX6nWzKka+wXHZNE+T2JYYz2cZYD7/2tlONHrPDQRJe1bW6Fd32Hn9+cGC+C+qV8pXfUuFbotto5/mVurcmVPVYhZ+bJfxWn5e9oCW9xq68fcB1NozhsDSBjCGIj34XNQCgnLPZfT5QqY8yYRqY1aUU=,iv:quUPvp/C+5Ixj3BIdbm+UJ6f05jMXwANg1yEeBsaKcQ=,tag:8OU2gZll7fb4YMr+gmcriA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
