--- a/cluster/apps/default/kometa/config/config.yml
+++ b/cluster/apps/default/kometa/config/config.yml
@@ -87,3 +87,6 @@ trakt:
     refresh_token: TRAKT_REFRESH_TOKEN
     scope: public
     created_at: TRAKT_CREATED_AT
+
+notifiarr:
+  apikey: NOTIFIARR_API_KEY
