--- a/cluster/apps/default/kometa/secret.sops.yaml
+++ b/cluster/apps/default/kometa/secret.sops.yaml
@@ -5,16 +5,16 @@ metadata:
     namespace: default
 type: Opaque
 stringData:
-    PLEX_TOKEN: ENC[AES256_GCM,data:HP2IxM0ttIdpQ/0Ho5ojZRojN68=,iv:StdE0q4QIGsxDnauRG8JuEzS0ubiIa8hZ6wYoZu7e4g=,tag:73FYdo2960wCE0uSuu1jzg==,type:str]
-    TMDB_API_KEY: ENC[AES256_GCM,data:5s2X/k26j+CalTJWIvzVyjq9Up2nIhJitDV5B08JUPE=,iv:swxg19o0cE7yLt1/2/f30x0jgfzpuJ+dDxHbthqaHP4=,tag:co34uZhYmqNjbZyGBUEhCg==,type:str]
-    RADARR_API_KEY: ENC[AES256_GCM,data:jBv28Aoh4sgVlJLYFBgcqu52RsLGlpfOQIEI4rxmKQc=,iv:AwQ57NbL4u+VKkwaQZlgv8xWhUDJj3CPKGglWRjTUPY=,tag:MfpXJtqeGEvPosstfXixIg==,type:str]
-    TRAKT_CLIENT_ID: ENC[AES256_GCM,data:Hcg5Wis0UtkYRO7+2jwx0FMYpKqiFDfS7GMBjfX0s5BtPw3vOv258whL/k5eH6YL02IAx9z2keyerDK4ZqEf5w==,iv:tUcm//QQyY/5b6nnj/6EwAbPxF/9H4XKQpY8UpNXHyU=,tag:C+COdV+FXEkrN3Q/x4XF3w==,type:str]
-    TRAKT_CLIENT_SECRET: ENC[AES256_GCM,data:Yc+IM5i+pVX28b9T5Zm4amDEF8/QW9dZXC/W0EkDaNfH9Lh3hV92WzlzTqM5BlS03AHDAt1rf7Q9ky3XYGf2wg==,iv:sHg5RLF1U/Og1TZozjPKxk0wQUnqQV4hRliLmV2/29k=,tag:1Wv0Z+Z/Gexpgh8tdq7WOQ==,type:str]
-    TRAKT_ACCESS_TOKEN: ENC[AES256_GCM,data:aOl+YjBbSSK/wrjGBFSrItIc4tK5dIUtq17mct1UMTNUokldwZDAObgRMJG2PHGYFUYHdz7jNMrNxkxuo5tdmw==,iv:AucaDrdeNs6AvWH7VOajuMCwes/PqHcKzlAvgkhXV2E=,tag:v85Uyl2asiS9j12OvSKQoQ==,type:str]
-    TRAKT_REFRESH_TOKEN: ENC[AES256_GCM,data:DdQmYD84PrWa8wwCUwT/mH0VEQtqzNvXLKoz4U7BYnTWPM4ZJ+gxmQH6pWcxH3tlzHDHg6d8TJgxS2cH2VS81Q==,iv:e6nPJ+7QTesx0HegmeLGaj0AmjwBBmK74pgmBDJH8hg=,tag:FhNCUYRLpTztLveEyXjchQ==,type:str]
-    TRAKT_CREATED_AT: ENC[AES256_GCM,data:XCNqLB08SeEYZA==,iv:6zYUgIcalXqAYtfUJtKT7G+jPLHta5HuW2et4RjcNWs=,tag:qHxqWgMcK6jv/v+03tU8vg==,type:str]
-    SONARR_API_KEY: ENC[AES256_GCM,data:vudR8wyC/u4Kp4HaygevZkaJTF12DYXz1Kijnmulcck=,iv:lfVOGU2rlWj2laPuIIlSuygwr/K9c+/7llU/BQH6XN4=,tag:ZCycXUHl3Pqfn0Dm0lg4lA==,type:str]
-    NOTIFIARR_API_KEY: ENC[AES256_GCM,data:qJINEZQ49VFBoj2kASfiPNHEAoalJskFwGmC6lE7wB+pu6UD,iv:rT2GlmVzLnk3fZIpbpCJaHDZF1huPDMS2a4Tk1kKhi4=,tag:r+kLWSUTyWMWmNA4SgUqXg==,type:str]
+    PLEX_TOKEN: ENC[AES256_GCM,data:ooQhchNc8mABz0z/oGnS8NXPoe4=,iv:/XwU/Ti1xHrCdHE2x6IwtxC/pNHbxE25hGnggmKIZek=,tag:LeJX8G+NoJx8zOvcSGSPRg==,type:str]
+    TMDB_API_KEY: ENC[AES256_GCM,data:b+08Tjr/SDiznRgRSEqY5NNjdciGBP6vQartd2SF82k=,iv:Qas21J/ACoEgc3YVtIPvjj7+JDh+LjTFFbCG9LPIauo=,tag:jG9LKlNgL/XMRDFNQjHXrw==,type:str]
+    RADARR_API_KEY: ENC[AES256_GCM,data:t02HRflpiuFT4tMKjs1NfIqJV6wHNZfh4DvMO87Giok=,iv:ZwVUv6mrB6oo5wn703Pq0UypOxYMiMRK0Th9XxmpqfI=,tag:w90RiULakUxzBLsD/nhJ2g==,type:str]
+    TRAKT_CLIENT_ID: ENC[AES256_GCM,data:tZkmWbwsLGPv52anCEd9lZMdBxqhHT1JunbC0aGTKPzS93BuZqb1YC38KWYXyYUjdw7qyc2a00naHgoCxTaIBg==,iv:C50+QtRSBtM9usVKk/K4/Yuzf8mqPQ2MwE0v1ztZM9E=,tag:4yltJ2s3TtlL00m2Zx3XIg==,type:str]
+    TRAKT_CLIENT_SECRET: ENC[AES256_GCM,data:tjG+vakuTN9NySf7TzkAF/yBHK3ccCy6Y7pOin6ukXUMibXfOWGSktOihXJViOVAQ6KGGEO0JM65qXDjIaTkAA==,iv:kK8wlvNXlzk/4KlrBFMPD1ISdsKPTom0xcjL6FZenxU=,tag:hajJ9j4EQy7zhmquzGriNQ==,type:str]
+    TRAKT_ACCESS_TOKEN: ENC[AES256_GCM,data:oiZRBCV+m3lPkqnryueEHWCH0wWgnXenbOdosFNuwAdKHhq5UR3U9xT6H4um49D23VBoY2QUh+fFphRaK/DNoA==,iv:T4/4tCDU/yUx70kZuQmbO8Imci/JZYSncVXi2irlupA=,tag:j7N4PFowM2kMV9ybrPxuAA==,type:str]
+    TRAKT_REFRESH_TOKEN: ENC[AES256_GCM,data:A8Z2aBrgcaEKBTBlaJX9qZGVyxhuWbzawXw4vqylykBA+b5+TEfb8ubv1Fw3UTdPwaxffhssaBE8sOayuywn9Q==,iv:S8S7p/cUiO/RtGrlF/Hrdl6T1YkfBFG/XWbmLQNwprc=,tag:KWK70+ndv+RbbM3z+mnLTQ==,type:str]
+    TRAKT_CREATED_AT: ENC[AES256_GCM,data:fQx9Hek9cWdkPw==,iv:zF3+mHhWic5ouux1/uD0PHkY+DbfN1+PGJCFHzaHpvM=,tag:sKOAdWPj8rpTejkYqEXFLQ==,type:str]
+    SONARR_API_KEY: ENC[AES256_GCM,data:sWKwwphtJHarwZf6Wv2B384wAehj3f1Axti0V/EZQgc=,iv:BqawvfP71YV9GA6fUFq7UtOe1uRPbQsZbgdR3m2WC7c=,tag:SK2a1Ia4P/IEluakXWTGqw==,type:str]
+    NOTIFIARR_API_KEY: ENC[AES256_GCM,data:nspaSRFyoR8KEJIl2NjWv1mWBe5GBO+0PpSPiWE4SrRJgav8,iv:q+k7dfxVmwxiiKYBHndJ8HDDER6hQUPZ/bpYFiCi1nE=,tag:hujawcY031axuvz78vIzLQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -24,14 +24,14 @@ sops:
         - recipient: age1r7u0qylrvurhvcaxjurqrflx2ey96lx5gzar6r8d9ctl6rzqg5gqu94ek4
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTbmdNcXZrazVVQ0d5cGx3
-            RWRUcHFNMFFYSXBMYjhVMWNNS29VRnJJVXdBCjVXUU9vdWt4YklHMzRxUnI1N0U1
-            ZmxqMWo2OEdDZi9XMVJQVEM2WUJQSUEKLS0tIElPWXVETjJZV3hHelFHc08xc3NU
-            TEl2N09tNDBPTWVpRFBCYm1Nb2JlRzQKHdoJzMpMLrk9Mkm4/V/CvqURDwNH8Myu
-            ZhJYvXPYrHlfFaRGIatqWHaDpq5BmPtT/2JVKaS+iGokro7JFwgcwQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5ZFN4VndFd0VZYWZ0SS9a
+            cG9URXBhRTdMV00zaWVDbzN1ZUs5TWQyempNCk1UV1BpN0s2QnYrdUE2blpQSVpQ
+            L2ptRGFjK0g0SUcyaFRIcXhSREtuM2cKLS0tIHMzZFdIbG1RQitPb2xuQ3prVkdS
+            TEVabUJlcUljR0IyLzF5eEtsQXJrQ0UKmkI4duGS/wlzsnHqwwRO9RhgzFPV6m2P
+            mg+am0fvDsTkkpiRJ0GmIgQ3GzVGKT86s51RmcRDy3fkPpUYPe2gaw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-02-24T10:30:50Z"
-    mac: ENC[AES256_GCM,data:AzQ2acOX9KmuS+GOHdJ5UX6nWzKka+wXHZNE+T2JYYz2cZYD7/2tlONHrPDQRJe1bW6Fd32Hn9+cGC+C+qV8pXfUuFbotto5/mVurcmVPVYhZ+bJfxWn5e9oCW9xq68fcB1NozhsDSBjCGIj34XNQCgnLPZfT5QqY8yYRqY1aUU=,iv:quUPvp/C+5Ixj3BIdbm+UJ6f05jMXwANg1yEeBsaKcQ=,tag:8OU2gZll7fb4YMr+gmcriA==,type:str]
+    lastmodified: "2026-02-24T11:13:52Z"
+    mac: ENC[AES256_GCM,data:v0ZA6zAPtZL/XvfagV69xhKMrclxK4CEGvoKRVRWLmHkZLg+szOqK2EqwANfO0U0S9PNFXAT/wI+RHyj9NfZhuR1Y8d/moXqzXVedMgJrRfLMJS8eBwoChQlmvivk5y8k7UFVuRGa0zOamLAa6WTUUSS/XL/7+oMgsOWICr6/AA=,iv:tCY6JwFGcf0fGz7SYZTkrYM4rPzlSV8c/+zjIKg6VnI=,tag:cQNyg9ljZmWridAbm4R6bg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
