--- a/cluster/apps/default/kometa/cronjob.yaml
+++ b/cluster/apps/default/kometa/cronjob.yaml
@@ -8,6 +8,7 @@ metadata:
     configmap.reloader.stakater.com/reload: "kometa-config kometa-libraries"
 spec:
   schedule: "*/10 * * * *" # Every 10 minutes
+  suspend: true
   concurrencyPolicy: Forbid
   successfulJobsHistoryLimit: 3
   failedJobsHistoryLimit: 3
@@ -111,7 +112,7 @@ spec:
                 - -c
               args:
                 - |
-                  python3 kometa.py --read-only-config --config /config/config.yml --run
+                  python3 kometa.py --read-only-config --config /config/config.yml --run --debug --trace
           restartPolicy: OnFailure
           volumes:
             - name: config
